--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-particles-js": "^3.6.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "three": "^0.163.0",
